--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.32 2005/03/23 15:49:06 miciah Exp $
+-- $Id: hooks.lua.in,v 1.33 2005/03/23 15:52:37 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -9,6 +9,8 @@
 --  Compatibility routines for Lua 4 code.
 --  Taken from Lua's compat.lua.
 ----------------------------------------------------------------------
+
+_OUTPUT = io.stdout
 
 function writeto (name)
   if name == nil then
