--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.34 2005/03/23 22:28:05 miciah Exp $
+-- $Id: hooks.lua.in,v 1.35 2005/03/23 22:28:28 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -82,7 +82,7 @@ function hx (c)
 end
 
 function char2hex (c)
-    return '%'..hx (string.byte (c) / 16)..hx (mod(string.byte (c), 16))
+    return '%'..hx (string.byte (c) / 16)..hx (math.mod(string.byte (c), 16))
 end
 
 function escape (str)
