--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.39 2005/03/24 21:23:59 miciah Exp $
+-- $Id: hooks.lua.in,v 1.40 2005/03/24 21:28:33 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -441,6 +441,18 @@ end
 table.insert(pre_format_html_hooks, highlight)
 
 
+-- Mangle ALT="" in IMG tags.
+function mangle_blank_alt (url, html)
+    local n
+
+    if not mangle_blank_alt then return nil,nil end
+
+    html, n = gisub (html, '(<img.-) alt=""', '%1 alt="&nbsp;"')
+
+    return ((n > 0) and html), nil
+end
+table.insert(pre_format_html_hooks, mangle_blank_alt)
+
 function pre_format_html_hook_ (url, html)
     local ret = nil
 
@@ -456,13 +468,6 @@ function pre_format_html_hook_ (url, html)
 --        os.remove (tmp)
 --        ret = 1
 --    end
-
-    -- Mangle ALT="" in IMG tags.
-    if mangle_blank_alt then
-	local n
-	html, n = gisub (html, '(<img.-) alt=""', '%1 alt="&nbsp;"')
-	ret = ret or (n > 0)
-    end
 
     -- Fix unclosed INPUT tags.
     if 1 then
