--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.40 2005/03/24 21:28:33 miciah Exp $
+-- $Id: hooks.lua.in,v 1.41 2005/03/24 21:31:06 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -453,6 +453,18 @@ function mangle_blank_alt (url, html)
 end
 table.insert(pre_format_html_hooks, mangle_blank_alt)
 
+
+-- Fix unclosed INPUT tags.
+function mangle_unclosed_input_tags (url, html)
+    local n
+
+    html, n = gisub (html, '(<input[^>]-[^=]")<', '%1><')
+
+    return ((n > 0) and html), nil
+end
+table.insert(pre_format_html_hooks, mangle_unclosed_input_tags)
+
+
 function pre_format_html_hook_ (url, html)
     local ret = nil
 
@@ -468,13 +480,6 @@ function pre_format_html_hook_ (url, html)
 --        os.remove (tmp)
 --        ret = 1
 --    end
-
-    -- Fix unclosed INPUT tags.
-    if 1 then
-        local n
-	html, n = gisub (html, '(<input[^>]-[^=]")<', '%1><')
-	ret = ret or (n > 0)
-    end
 
     -- Fix unclosed A tags.
     if 1 then
