--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.43 2005/03/24 21:38:04 miciah Exp $
+-- $Id: hooks.lua.in,v 1.44 2005/03/24 21:43:01 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -495,6 +495,28 @@ end
 table.insert(pre_format_html_hooks, mangle_linuxtoday)
 
 
+function mangle_dictionary_dot_com (url, html)
+    local t = { t = "" }
+    local n
+
+    if not sstrfind (url, "dictionary.com/cgi-bin/dict.pl") then return nil,nil end
+
+    _,n = string.gsub (html, "resultItemStart %-%-%>(.-)%<%!%-%- resultItemEnd",
+		       function (x) t.t = t.t.."<tr><td>"..x.."</td></tr>" end)
+    if n == 0 then
+	-- we've already mangled this page before
+	return nil,1
+    end
+
+    html = "<html><head><title>Dictionary.com lookup</title></head>"..
+	   "<body><table border=0 cellpadding=5>"..t.t.."</table>"..
+	   "</body></html>"
+
+    return html,1
+end
+table.insert(pre_format_html_hooks, mangle_dictionary_dot_com)
+
+
 function pre_format_html_hook_ (url, html)
     local ret = nil
 
@@ -513,20 +535,7 @@ function pre_format_html_hook_ (url, html)
 
     -- These quick 'n dirty patterns don't maintain proper HTML.
 
-    -- dictionary.com
-    if sstrfind (url, "dictionary.com/cgi-bin/dict.pl") then
-	local t = { t = "" }
-	local _, n = string.gsub (html, "resultItemStart %-%-%>(.-)%<%!%-%- resultItemEnd",
-			   function (x) t.t = t.t.."<tr><td>"..x.."</td></tr>" end)
-	if n == 0 then
-	    -- we've already mangled this page before
-	    return html
-	else
-	    return "<html><head><title>Dictionary.com lookup</title></head>"..
-		    "<body><table border=0 cellpadding=5>"..t.t.."</table>"..
-		    "</body></html>"
-	end
-    elseif sstrfind (url, "allmusic.com") then
+    if sstrfind (url, "allmusic.com") then
         return string.gsub(html, "javascript:z%('(.-)'%)", "/cg/amg.dll?p=amg&sql=%1")
     end
 
