--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.44 2005/03/24 21:43:01 miciah Exp $
+-- $Id: hooks.lua.in,v 1.45 2005/03/24 21:45:28 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -517,6 +517,16 @@ end
 table.insert(pre_format_html_hooks, mangle_dictionary_dot_com)
 
 
+function mangle_allmusic_dot_com (url, html)
+    if not sstrfind (url, "allmusic.com") then return nil,nil end
+
+    html = string.gsub(html, "javascript:z%('(.-)'%)", "/cg/amg.dll?p=amg&sql=%1")
+
+    return html,1
+end
+table.insert(pre_format_html_hooks, mangle_allmusic_dot_com)
+
+
 function pre_format_html_hook_ (url, html)
     local ret = nil
 
@@ -534,10 +544,6 @@ function pre_format_html_hook_ (url, html)
 --    end
 
     -- These quick 'n dirty patterns don't maintain proper HTML.
-
-    if sstrfind (url, "allmusic.com") then
-        return string.gsub(html, "javascript:z%('(.-)'%)", "/cg/amg.dll?p=amg&sql=%1")
-    end
 
     return ret and html or nil
 end
