--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.48 2005/03/25 04:44:27 miciah Exp $
+-- $Id: hooks.lua.in,v 1.49 2005/03/25 04:47:25 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -303,6 +303,19 @@ smartprefixes = {
     draft = "http://www.rfc-editor.org/cgi-bin/idsearch.pl?searchwords=%s&format=http&abstract=abson&keywords=keyon&num=25",
 }
 
+-- Expand ~ to home directories.
+function expand_tilde (url, current_url)
+    if not match ("~", url) then return nil,nil end
+
+    if string.sub(url, 2, 2) == "/" or string.len(url) == 1 then    -- ~/foo
+	return home_dir..string.sub(url, 2),1
+    else                                -- ~foo/bar
+	return "/home/"..string.sub(url, 2),1
+    end
+end
+table.insert(goto_url_hooks, expand_tilde)
+
+    
 function goto_url_hook_ (url, current_url)
     if dumbprefixes[url] then
 	if current_url then
@@ -324,15 +337,6 @@ function goto_url_hook_ (url, current_url)
                       ..type(smartprefixes[nick])..'".')
                 return nil
             end
-        end
-    end
-
-    -- Expand ~ to home directories.
-    if match ("~", url) then
-        if string.sub(url, 2, 2) == "/" or string.len(url) == 1 then    -- ~/foo
-            return home_dir..string.sub(url, 2)
-        else                                -- ~foo/bar
-            return "/home/"..string.sub(url, 2)
         end
     end
 
