--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.50 2005/03/25 04:50:37 miciah Exp $
+-- $Id: hooks.lua.in,v 1.51 2005/03/25 04:53:49 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -325,12 +325,12 @@ end
 table.insert(goto_url_hooks, expand_localhost)
 
 
-function goto_url_hook_ (url, current_url)
+function complete_uri_prefix (url, current_url)
     if dumbprefixes[url] then
 	if current_url then
-	    return string.gsub(dumbprefixes[url], "%%c", current_url)
+	    return string.gsub(dumbprefixes[url], "%%c", current_url),true
 	else
-            return dumbprefixes[url]
+            return dumbprefixes[url],true
 	end
     end
 
@@ -338,21 +338,21 @@ function goto_url_hook_ (url, current_url)
         local _,_,nick,val = string.find(url, "^([^%s:]+)[:%s]%s*(.-)%s*$")
         if nick and smartprefixes[nick] then
             if type(smartprefixes[nick]) == 'function' then
-                return smartprefixes[nick](val)
+                return smartprefixes[nick](val),true
             elseif type(smartprefixes[nick]) == 'string' then
-                return string.format(smartprefixes[nick], escape(val))
+                return string.format(smartprefixes[nick], escape(val)),true
             else
                 error('smartprefix "'..nick..'" has unsupported type "'
                       ..type(smartprefixes[nick])..'".')
-                return nil
+                return nil,nil
             end
         end
     end
 
     -- Unmatched.
-    return url
+    return nil,nil
 end
-table.insert(goto_url_hooks, goto_url_hook_)
+table.insert(goto_url_hooks, complete_uri_prefix)
 
 
 -----------------------------------------------------------------------
