--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.51 2005/03/25 04:53:49 miciah Exp $
+-- $Id: hooks.lua.in,v 1.52 2005/03/25 04:54:54 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -308,9 +308,9 @@ function expand_tilde (url, current_url)
     if not match ("~", url) then return nil,nil end
 
     if string.sub(url, 2, 2) == "/" or string.len(url) == 1 then    -- ~/foo
-	return home_dir..string.sub(url, 2),1
+	return home_dir..string.sub(url, 2),true
     else                                -- ~foo/bar
-	return "/home/"..string.sub(url, 2),1
+	return "/home/"..string.sub(url, 2),true
     end
 end
 table.insert(goto_url_hooks, expand_tilde)
@@ -498,7 +498,7 @@ function mangle_linuxtoday (url, html)
     -- emphasis in text is lost
     html = string.gsub (html, 'text="#002244"', 'text="#001133"', 1)
 
-    return html,1
+    return html,true
 end
 table.insert(pre_format_html_hooks, mangle_linuxtoday)
 
@@ -513,14 +513,14 @@ function mangle_dictionary_dot_com (url, html)
 		       function (x) t.t = t.t.."<tr><td>"..x.."</td></tr>" end)
     if n == 0 then
 	-- we've already mangled this page before
-	return nil,1
+	return nil,true
     end
 
     html = "<html><head><title>Dictionary.com lookup</title></head>"..
 	   "<body><table border=0 cellpadding=5>"..t.t.."</table>"..
 	   "</body></html>"
 
-    return html,1
+    return html,true
 end
 table.insert(pre_format_html_hooks, mangle_dictionary_dot_com)
 
@@ -530,7 +530,7 @@ function mangle_allmusic_dot_com (url, html)
 
     html = string.gsub(html, "javascript:z%('(.-)'%)", "/cg/amg.dll?p=amg&sql=%1")
 
-    return html,1
+    return html,true
 end
 table.insert(pre_format_html_hooks, mangle_allmusic_dot_com)
 
