--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.56 2005/03/25 05:08:49 miciah Exp $
+-- $Id: hooks.lua.in,v 1.57 2005/03/25 05:11:33 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -365,7 +365,7 @@ function bookmarks_follow_url_hook (url)
 	    return nil,true
 	else
 	    url = bm_get_bookmark_url (url)
-	    if url then return url,true
+	    if url then return url,true end
 	end
     end
 
